# jozef-lang

./: Cargo.toml  README.md
jozef-lang-syntax-highlight/: README.md  jozef-lang-syntax-highlight-0.0.1.vsix  package.json
jozef-lang-syntax-highlight/syntaxes/: jozef-lang.tmLanguage.json
src/: args.rs  main.rs  utils.rs
src/codegen/: custom_codegen.rs  generate.rs  ir.rs  llvm_codegen.rs  lower.rs  mod.rs  x86_64.rs
src/lexer/: cursor.rs  lexer.rs  mod.rs  token.rs
src/parser/: ast.rs  mod.rs  parser.rs
src/semantic/: analyser.rs  mod.rs
tests/: integration.rs
tests/examples/: print.jlang
